--- a/Config/Jabo.ini
+++ b/Config/Jabo.ini
@@ -16,7 +16,7 @@
 // Note that Project64 automatically prefixes "http://"
 
 Author=PJ64LegacyTeam
-Date=12th May 2023 Version: 1
+Date=13th May 2023 Version: 1
 Homepage=project64.emulation64.com
 Version=Project64 1.6.2 (Lagacy)
 
@@ -6344,10 +6344,17 @@ Internal Name=CARNIVAL
 Good Name=Freak Boy (Prototype)
 Internal Name=FREAK BOY
 
-//
-//-------- Any entries below this point are for ROMs you have added via the GUI [EOF] --------
 
 [6F4DF892-D3FFBD5B-C:43]
+Good Name=The Legend of Zelda - Majora's Mask (CHN) (iQue)
 Clear Frame=0
-Resolution Height=-1
-Resolution Width=-1
+Internal Name=ZELDA MAJORA'S MASK
+
+
+[470112E9-53C66CB4-C:41]
+Good Name Name=XENO CRISIS 64
+Internal Name=XENO CRISIS
+
+//
+//End Of File----------> Anything under here was put in by you <--------------------------------
+
