Initial support for Jabo Direct3D8 1.7.0.57 -Bypasses PJ 1.7 protection -Reversing done by partial implementation of the undocumented GFX Plugin Spec #1.4
Need to implement
-Settings saving and loading from INI (in 1.4 spec it's responsibility of the core)
-Context menu in ROM browser

__fastcall changed to __cdecl in Release External due to Direct3D8 InitiateGFX Exception

--- a/Project64.vcxproj
+++ b/Project64.vcxproj
@@ -172,7 +172,7 @@
       <PrecompiledHeaderOutputFile>.\Release_External\Project64.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release_External\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release_External\</ProgramDataBaseFileName>
-      <CallingConvention>FastCall</CallingConvention>
+      <CallingConvention>Cdecl</CallingConvention>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <EnablePREfast>false</EnablePREfast>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
@@ -427,6 +427,7 @@
     <ClInclude Include="RomTools_Common.h" />
     <ClInclude Include="Settings Api.h" />
     <ClInclude Include="Settings Common Defines.h" />
+    <ClInclude Include="SettingsID.h" />
     <ClInclude Include="tlb Display.h" />
     <ClInclude Include="Cheats.h" />
     <ClInclude Include="HTMLHELP.H" />
