Various fixes for "text" cheat searches
- Fixed the save button when text cheats are selected.
- Fixed the code type in the preview pane for text cheats.
- Dropdowns no longer allow freeform text input. They are multichoice
  options, not text boxes!
- Added a default item to the cheat type dropdown for text cheats, so it
  isn't just an empty box.
- Changed the PJ64_Cheats.rc file encoding to UTF-8. Was UTF-16 with
  BOM.

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -86,7 +86,7 @@ BEGIN
     DEFPUSHBUTTON   "Dump",IDOK,156,90,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,210,90,50,14
     GROUPBOX        "Range",IDC_STATIC,6,6,252,78
-    COMBOBOX        IDC_MD_RANGE,12,24,240,54,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_MD_RANGE,12,24,240,54,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_MD_RANGESTART,42,42,79,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_MD_RANGEEND,174,42,79,12,ES_AUTOHSCROLL
     LTEXT           "Start",IDC_STATIC,12,44,17,8
