--- a/Config/Jabo.ini
+++ b/Config/Jabo.ini
@@ -16,7 +16,7 @@
 // Note that Project64 automatically prefixes "http://"
 
 Author=PJ64LegacyTeam
-Date=9th July 2023 Version: 1
+Date=17th July 2023 Version: 1
 Homepage=project64.emulation64.com
 Version=Project64 1.6.2 (Lagacy)
 
@@ -4733,7 +4733,10 @@ Good Name=Nintendo On My Mind Demo by Kid Stardust (PD)
 Internal Name=Nintendo On My Mind
 
 [D1C6C55D-F010EF52-C:00]
-Ã[4E01B4A6-C884D085-C:00]
+Name=Nintendo WideBoy 64 by SonCrap (PD)
+Internal Name= 
+
+[4E01B4A6-C884D085-C:00]
 Good Name=Nintro64 Demo by Lem (POM '98) (PD)
 Internal Name=  Nintro64 by SPLiT
 
