--- a/Project64.vcxproj.filters
+++ b/Project64.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClCompile Include="WatchPoints.cpp">
       <Filter>Source Files\Debugger Source</Filter>
     </ClCompile>
+    <ClCompile Include="Sessions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BreakPoints.h">
@@ -499,6 +502,12 @@
     </ClInclude>
     <ClInclude Include="cbor-lite\codec-fp.h">
       <Filter>Header Files\cbor-lite Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="SessionMemBookmarks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sessions.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
