--- a/Project64.vcxproj.filters
+++ b/Project64.vcxproj.filters
@@ -70,6 +70,9 @@
     <Filter Include="Lib Files">
       <UniqueIdentifier>{e8877f6e-d284-4c15-84e8-18cf809faa07}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\cbor-lite Headers">
+      <UniqueIdentifier>{c59b946f-43e7-4676-8b2b-840d70c41937}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BreakPoints.c">
@@ -278,6 +281,9 @@
     </ClCompile>
     <ClCompile Include="WatchPoints.cpp">
       <Filter>Source Files\Debugger Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Sessions.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -490,6 +496,18 @@
     </ClInclude>
     <ClInclude Include="WatchPoints.h">
       <Filter>Header Files\Debugger Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="cbor-lite\codec.h">
+      <Filter>Header Files\cbor-lite Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="cbor-lite\codec-fp.h">
+      <Filter>Header Files\cbor-lite Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="SessionMemBookmarks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sessions.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
