Fix NEG.S, NEG.D, SQRT.S, SQRT.D n64-systemtest tests in interpreter.

--- a/Project64.vcxproj
+++ b/Project64.vcxproj
@@ -106,6 +106,9 @@
       <CompileAs>Default</CompileAs>
       <TreatWarningAsError>false</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <FloatingPointModel>Strict</FloatingPointModel>
+      <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
+      <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
