Gent & Ice's Latest Updated.
 Update Information:
 Copyright & Homepage Information Update

 Full screen Dialogs:
 Setting Dialogs available in Fullscreen with shortcut keys

 Support Forum link replaced:
 Replaced Support Forum with GitHub link in Help Tab

--- a/PJ64.rc
+++ b/PJ64.rc
@@ -932,14 +932,14 @@ BEGIN
     POPUP "&Options"
     BEGIN
         MENUITEM "&Full Screen\tAlt+Enter",     ID_OPTIONS_FULLSCREEN, GRAYED
-        MENUITEM "&Always On &Top\tCtrl+A",     ID_OPTIONS_ALWAYSONTOP, GRAYED
+        MENUITEM "&Always On Top\tCtrl+A", ID_OPTIONS_ALWAYSONTOP, GRAYED
         MENUITEM SEPARATOR
-        MENUITEM "Configure Graphics Plugin...", ID_OPTIONS_CONFIG_GFX, GRAYED
-        MENUITEM "Configure Audio Plugin...",   ID_OPTIONS_CONFIG_AUDIO, GRAYED
-        MENUITEM "Configure Controller Plugin...", ID_OPTIONS_CONFIG_CONTROL, GRAYED
-        MENUITEM "Configure RSP Plugin...",     ID_OPTIONS_CONFIG_RSP, GRAYED
+        MENUITEM "Configure &Graphics Plugin...\tCtrl+V", ID_OPTIONS_CONFIG_GFX, GRAYED
+        MENUITEM "Configure A&udio Plugin...\tCtrl+U", ID_OPTIONS_CONFIG_AUDIO, GRAYED
+        MENUITEM "Configure &Controller Plugin...\tCtrl+X", ID_OPTIONS_CONFIG_CONTROL, GRAYED
+        MENUITEM "Configure &RSP Plugin...\tCtrl-W", ID_OPTIONS_CONFIG_RSP, GRAYED
         MENUITEM SEPARATOR
-        MENUITEM "Show CPU usage %",            ID_OPTIONS_SHOWCPUUSAGE
+        MENUITEM "Show CPU usage %", ID_OPTIONS_SHOWCPUUSAGE
         MENUITEM "&Settings...\tCtrl+T",        ID_OPTIONS_SETTINGS
     END
     POPUP "&Debugger"
@@ -992,7 +992,7 @@ BEGIN
         MENUITEM "&User Manual...",             ID_HELP_CONTENTS
         MENUITEM "&Game FAQ...",                ID_HELP_GAMEFAQ
         MENUITEM SEPARATOR
-        MENUITEM "Support &Forum",              ID_HELP_SUPPORTFORUM
+        MENUITEM "GitHub",                      ID_HELP_GITHUB
         MENUITEM "&Homepage",                   ID_HELP_HOMEPAGE
         MENUITEM "&Discord",                    ID_HELP_DISCORD
         MENUITEM SEPARATOR
@@ -1077,9 +1077,13 @@ END
 IDR_ROMBROWSER ACCELERATORS
 BEGIN
     "O",            ID_FILE_OPEN_ROM,       VIRTKEY, CONTROL, NOINVERT
-    "T",            ID_OPTIONS_SETTINGS,    VIRTKEY, CONTROL, NOINVERT
-    VK_F10,         ID_FILE_STARTEMULATION, VIRTKEY, NOINVERT
     VK_F5,          ID_FILE_REFRESHROMLIST, VIRTKEY, NOINVERT
+    VK_F10,         ID_FILE_STARTEMULATION, VIRTKEY, NOINVERT
+    "T",            ID_OPTIONS_SETTINGS,    VIRTKEY, CONTROL, NOINVERT
+    "V",            ID_OPTIONS_CONFIG_GFX,  VIRTKEY, CONTROL, NOINVERT
+    "U",            ID_OPTIONS_CONFIG_AUDIO, VIRTKEY, CONTROL, NOINVERT
+    "X",            ID_OPTIONS_CONFIG_CONTROL, VIRTKEY, CONTROL, NOINVERT
+    "W",            ID_OPTIONS_CONFIG_RSP,  VIRTKEY, CONTROL, NOINVERT
 END
 
 IDR_CPURUNNING ACCELERATORS
@@ -1101,11 +1105,17 @@ BEGIN
     "0",            ID_CURRENTSAVE_DEFAULT, ASCII,  NOINVERT
     VK_F11,         ID_FILE_ENDEMULATION,   VIRTKEY, NOINVERT
     "C",            ID_OPTIONS_CHEATS,      VIRTKEY, CONTROL, NOINVERT
+    "U",            ID_OPTIONS_CONFIG_AUDIO, VIRTKEY, CONTROL, NOINVERT
+    "X",            ID_OPTIONS_CONFIG_CONTROL, VIRTKEY, CONTROL, NOINVERT
+    "V",            ID_OPTIONS_CONFIG_GFX,  VIRTKEY, CONTROL, NOINVERT
+    "W",            ID_OPTIONS_CONFIG_RSP,  VIRTKEY, CONTROL, NOINVERT
     VK_ESCAPE,      ID_OPTIONS_FULLSCREEN,  VIRTKEY, NOINVERT
     VK_RETURN,      ID_OPTIONS_FULLSCREEN,  VIRTKEY, ALT, NOINVERT
+    "T",            ID_OPTIONS_SETTINGS,    VIRTKEY, CONTROL, NOINVERT
     VK_F3,          ID_SYSTEM_GENERATEBITMAP, VIRTKEY, NOINVERT
     VK_F9,          ID_SYSTEM_GSBUTTON,     VIRTKEY, NOINVERT
     VK_F4,          ID_SYSTEM_LIMITFPS,     VIRTKEY, NOINVERT
+    "R",            ID_SYSTEM_CHEATSEARCH,  VIRTKEY, CONTROL, NOINVERT
 END
 
 #endif    // English (Australia) resources
