--- a/PJ64_Cheat.rc
+++ b/PJ64_Cheat.rc
@@ -61,7 +61,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 //
 
 IDD_Cheats_Search DIALOGEX 0, 0, 441, 255
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOPMOST
 CAPTION "Cheat search"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -100,6 +101,7 @@ END
 
 IDD_Cheats_Search_Edit DIALOGEX 0, 0, 224, 155
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOPMOST
 CAPTION "Edit cheat"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
